--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </h1>
     <div>
       <div>
-        <h2>Click start to play!</h2>
+        <h2>Click <button id="start">START</button> to play!</h2>
       </div>
       <div>
         <h2>score: <span id="score">0</span></h2>
@@ -45,7 +45,7 @@
       <div id="hole8" class="hole">
         <div id="mole8" class="mole"></div>
       </div>
-      <button id="start">START</button>
+
     </div>
     <script src="./src/index.js"></script>
   </body>
