Updated images and font

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1 id="title">
-      Whack a Mole!
+      Whack a <s>Mole</s> <em>CARROT</em>!
     </h1>
     <div>
       <div>
