Added styling and music

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <link rel="stylesheet" href="./src/styles.css">
   </head>
   <body>
+    <div>
     <h1 id="title">
       Whack a <s>Mole</s> <em>CARROT</em>!
     </h1>
+  </div>
     <div>
-      <div>
         <h2>Click <button id="start">START</button> to play!</h2>
       </div>
       <div>
@@ -24,7 +25,7 @@
       <div id="hole1" class="hole">
         <div id="mole1" class="mole"></div>
       </div>
-      /<div id="hole2" class="hole">
+      <div id="hole2" class="hole">
         <div id="mole2" class="mole"></div>
       </div>
       <div id="hole3" class="hole">
@@ -45,8 +46,12 @@
       <div id="hole8" class="hole">
         <div id="mole8" class="mole"></div>
       </div>
-
     </div>
     <script src="./src/index.js"></script>
   </body>
+  <footer>
+    <div>
+      <p>Carrot image by pikisuperstar on Freepik</p>
+    </div>
+  </footer>
 </html>
